Add serdes driver for max96722/96717/9295
Enable FMC/OMC camera for apollo project.

Add maxim deserializer driver for max96722.
Add maxim serializer driver for max96717(FMC camera).
Add maxim serializer driver for max9295 (OMC camera).

Test with v4l2 video capture with yavta and media-ctl

Tracked-On: OAM-111330
Signed-off-by: Chang Ying <ying.chang@intel.com>

--- a/drivers/media/i2c/Kconfig
+++ b/drivers/media/i2c/Kconfig
@@ -1640,6 +1640,24 @@ config VIDEO_ISX031
     help
       This is a Video4Linux2 sensor-level driver for Sony ISX031 camera.
 
+config VIDEO_MAX9295A
+    depends on I2C && VIDEO_V4L2
+    tristate "MAX9295A dummy sensor"
+    help
+      This is a Video4Linux2 sensor-level driver for MAX9295A dummy sensor.
+
+config VIDEO_MAX96717F
+    depends on I2C && VIDEO_V4L2
+    tristate "MAX96717F dummy sensor"
+    help
+      This is a Video4Linux2 sensor-level driver for MAX96717F dummy sensor.
+
+config VIDEO_MAX96722
+    depends on I2C && VIDEO_V4L2
+    tristate "MAX96722 deserializer driver"
+    help
+      This is a Video4Linux2 driver for MAX96722 deserializer.
+
 endmenu
 
 endif # VIDEO_V4L2
