--- a/drivers/staging/media/Kconfig
+++ b/drivers/staging/media/Kconfig
@@ -45,3 +45,6 @@ source "drivers/staging/media/ipu3/Kconfig"
 source "drivers/staging/media/av7110/Kconfig"
 
 endif
+
+source "drivers/staging/media/v4l2loopback/Kconfig"
+
