Add Embedded Controller Driver
Tracked-On: OAM-112396
Signed-off-by: jizhenlo <zhenlong.z.ji@intel.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -517,4 +517,5 @@ source "drivers/misc/pvpanic/Kconfig"
 source "drivers/misc/vpumgr/Kconfig"
 source "drivers/misc/Gpio-asm28xx/Kconfig"
 source "drivers/misc/gna/Kconfig"
+source "drivers/misc/ec/Kconfig"
 endmenu
