--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1363,6 +1363,7 @@ endif
 config BOOT_CONFIG
 	bool "Boot config support"
 	select BLK_DEV_INITRD
+	select ARCH_KEEP_MEMBLOCK
 	help
 	  Extra boot config allows system admin to pass a config file as
 	  complemental extension of kernel cmdline when booting.
