intel_tasks_dumper: Init
Add a new panic handler that will be able to dump a full tasks
state upon various panics. Because this dump could be time
sensitive, also temporary disable the slow consoles during this.
By default only soft/hard lockups and Kernel watchdog warning
interrupts are targeted, but the functionality can be extended
to all panics or forced disable by "force_en" and "force_dis"
module parameters.

Signed-off-by: Bo He <bo.he@intel.com>

--- a/drivers/platform/x86/Makefile
+++ b/drivers/platform/x86/Makefile
@@ -107,6 +107,7 @@ obj-$(CONFIG_I2C_MULTI_INSTANTIATE)	+= i2c-multi-instantiate.o
 obj-$(CONFIG_MLX_PLATFORM)		+= mlx-platform.o
 obj-$(CONFIG_TOUCHSCREEN_DMI)		+= touchscreen_dmi.o
 obj-$(CONFIG_WIRELESS_HOTKEY)		+= wireless-hotkey.o
+obj-$(CONFIG_INTEL_TASKS_DUMP)	+= intel-tasks-dumper.o
 
 # Intel uncore drivers
 obj-$(CONFIG_INTEL_IPS)				+= intel_ips.o
