--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -379,6 +379,13 @@ config DRM_TI_TPD12S015
 	  Texas Instruments TPD12S015 HDMI level shifter and ESD protection
 	  driver.
 
+config DRM_I2C_TI_983
+	tristate "TI DS90UB983/DS90UB984/DS90UBMCU Serdes serializer deserializer support"
+	depends on DRM_BRIDGE
+	default y
+	help
+	  Texas Instruments DS90UB983 and DS90UB984 Serdes driver
+
 source "drivers/gpu/drm/bridge/analogix/Kconfig"
 
 source "drivers/gpu/drm/bridge/adv7511/Kconfig"
